03_infrastructure/storage/longhorn/overlays/dev/ingress-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  routes:
    - match: Host(`longhorn.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: longhorn-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-tls
spec:
  routes:
    - match: Host(`longhorn.127.0.0.1.xip.io`)
      kind: Rule
      services:
        - name: longhorn-gatekeeper
          port: 3000
